[gd_scene load_steps=49 format=3 uid="uid://bbp1ccoa6te1g"]

[ext_resource type="Script" path="res://11_SPEAKER/Open_Dialogue.gd" id="1_6gph5"]
[ext_resource type="Script" path="res://09_NPC/NPC_DIVE_SELECTOR/Npc_loader.gd" id="2_gecf5"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="2_iqwu8"]
[ext_resource type="Script" path="res://11_SPEAKER/Dialogue/Dialogue_asset/Ini_dialogue.gd" id="2_pxao7"]
[ext_resource type="Script" path="res://09_NPC/Npc_Init.gd" id="3_u2fyv"]
[ext_resource type="Resource" uid="uid://l3coaeai3lx6" path="res://09_NPC/Npc_data/Baltazar_data.tres" id="4_y4ud3"]
[ext_resource type="Resource" uid="uid://b5kt2xn16lfgt" path="res://09_NPC/Npc_data/Otis_data.tres" id="5_wppld"]
[ext_resource type="Resource" uid="uid://xuxu60afj84h" path="res://09_NPC/Npc_data/Guy_02_data.tres" id="6_6xaf4"]
[ext_resource type="Material" uid="uid://dxkegh8ms5y46" path="res://06_UI/Panel_ui_disolved_mat.tres" id="7_mabi4"]
[ext_resource type="PackedScene" uid="uid://ccq1654e6goa5" path="res://09_NPC/Model/hand_basic.tscn" id="8_rq6rq"]
[ext_resource type="Script" path="res://11_SPEAKER/Dialogue/Dialogue_asset/Dialogue_box.gd" id="9_n4i7c"]
[ext_resource type="PackedScene" uid="uid://kfeia6x8pslm" path="res://09_NPC/guy_02_prefab.tscn" id="11_60j22"]

[sub_resource type="GDScript" id="GDScript_d4nqo"]
script/source = "extends Node

@onready var hand_basic = $\"../00_NPC_CREATOR/Models/hand_basic\"
@onready var Npc = $\"../00_NPC_CREATOR/Models/Loader\"

func _ready():
	_global_datas._show_hand.connect(_show_hand)
	_global_datas._hide_hand.connect(_hide_hand)
	
func _show_hand():
	hand_basic.visible = true
	Npc.visible = false
func _hide_hand():
	hand_basic.visible = false
	Npc.visible = true

"

[sub_resource type="GDScript" id="GDScript_ktgfg"]
script/source = "extends Node


func _ready():
	_global_datas._open_dialogue.connect(_start_update)
	_global_datas._close_dialogue.connect(_stop_update)


func _start_update():
	$Timer.start()
	
func _stop_update():
	$Timer.stop()
	
		
func _updateFace():
	var rng = RandomNumberGenerator.new()
	var number = rng.randf_range(0.0, 1.0)
	RenderingServer.global_shader_parameter_set(\"random_faceAmount\",number)
	
	var z = rng.randf_range(-1, 1)
	var x = rng.randf_range(-1,1)
	var y = rng.randf_range(-1, 1)

	$\"../00_NPC_CREATOR/Models/Loader\".rotation_degrees.x = y
	$\"../00_NPC_CREATOR/Models/Loader\".rotation_degrees.y = x
	$\"../00_NPC_CREATOR/Models/Loader\".rotation_degrees.z = z
	
	
	
func _on_timer_timeout():
	_updateFace()
	$Timer.start()
	
"

[sub_resource type="GDScript" id="GDScript_wf71c"]
script/source = "extends Node

@onready var dialogue_text = $\"../00_NPC_CREATOR/Npc_convas/Dialogue_box/Dialogue_text\"


func _on_text_button_pressed():
	var words: String = dialogue_text.get_text()
	_global_datas.instance_word_text._intance_words_note(words)	
	

"

[sub_resource type="VisualShader" id="VisualShader_6uu1l"]
code = "shader_type canvas_item;
render_mode blend_mix;



"
graph_offset = Vector2(-291, 7)
mode = 1
flags/light_only = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6s3bf"]
shader = SubResource("VisualShader_6uu1l")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pykt4"]
size = Vector2(1916, 1076)

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_cvj4c"]
input_name = "texture"

[sub_resource type="VisualShaderNodeColorConstant" id="VisualShaderNodeColorConstant_14cg5"]
constant = Color(0.244572, 0.493703, 0.423517, 1)

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_kymmc"]
expanded_output_ports = [0]
source = 5

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_gt787"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0, 0, 0)]
op_type = 3

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_hqeo0"]

[sub_resource type="Gradient" id="Gradient_pqd7u"]
colors = PackedColorArray(0, 0, 0, 1, 0.796243, 0.796243, 0.796243, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_khnsx"]
gradient = SubResource("Gradient_pqd7u")
fill_from = Vector2(1, 1)

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_7imnm"]
texture = SubResource("GradientTexture2D_khnsx")

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_v3h8k"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(1, 1, 1), 2, Vector3(0.5, 0.5, 0.5)]
op_type = 3

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_kpt7u"]

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_dyn8m"]
function = 31

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_n4qvm"]
constant = 0.47

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_ha1yb"]
constant = 0.034

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_4pxt3"]
input_name = "uv"

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_8v6s5"]

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_fg2tq"]
size = Vector2(513.781, 284.487)
expression = "vec2 n_uv = UV -0.5;
float d = length(n_uv);
float c = smoothstep(r,r + feather,d);
color = vec4(vec3(c),1.0);"

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_rooc8"]
function = 31

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_u84nn"]
constant = 0.3

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_umnvf"]
constant = 1.0

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_hcn2v"]
size = Vector2(634.014, 470.339)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_qnelr"]
default_input_values = [0, Vector3(0, 0, 0), 1, Vector3(0.525, 0.525, 0.525), 2, 1.0]
op_type = 4

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_a6ror"]

[sub_resource type="VisualShader" id="VisualShader_6tujj"]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform sampler2D tex_frg_38;



void fragment() {
// ColorConstant:29
	vec4 n_out29p0 = vec4(0.244572, 0.493703, 0.423517, 1.000000);


	vec4 n_out3p0;
// Texture2D:3
	n_out3p0 = texture(TEXTURE, UV);
	float n_out3p4 = n_out3p0.a;


// Mix:31
	vec3 n_out31p0 = mix(vec3(n_out29p0.xyz), vec3(n_out3p0.xyz), vec3(n_out3p4));


// FloatConstant:55
	float n_out55p0 = 1.000000;


// FloatConstant:54
	float n_out54p0 = 0.300000;


	float n_out56p0;
// Expression:56
	n_out56p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out54p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out56p0 = n_out55p0 - DITHER_THRESHOLDS[index];
	}


// Input:49
	vec2 n_out49p0 = UV;


// UVFunc:51
	vec2 n_in51p1 = vec2(1.00000, 1.00000);
	vec2 n_in51p2 = vec2(0.00000, 0.00000);
	vec2 n_out51p0 = n_in51p2 * n_in51p1 + n_out49p0;


// FloatConstant:47
	float n_out47p0 = 0.470000;


// FloatConstant:48
	float n_out48p0 = 0.034000;


	vec4 n_out52p0;
// Expression:52
	n_out52p0 = vec4(0.0, 0.0, 0.0, 0.0);
	{
		vec2 n_uv = n_out51p0 -0.5;
		float d = length(n_uv);
		float c = smoothstep(n_out47p0,n_out47p0 + n_out48p0,d);
		n_out52p0 = vec4(vec3(c),1.0);
	}


// FloatFunc:53
	float n_out53p0 = 1.0 - n_out52p0.x;


// Texture2D:38
	vec4 n_out38p0 = texture(tex_frg_38, UV);


// FloatFunc:42
	float n_out42p0 = 1.0 - n_out38p0.x;


// Mix:39
	vec3 n_in39p0 = vec3(0.00000, 0.00000, 0.00000);
	vec3 n_out39p0 = mix(n_in39p0, vec3(n_out53p0), vec3(n_out42p0));


// Step:40
	float n_out40p0 = step(n_out56p0, n_out39p0.x);


// Mix:57
	float n_in57p2 = 1.00000;
	vec3 n_out57p0 = mix(vec3(n_out40p0), vec3(n_out3p4), n_in57p2);


// VectorOp:33
	vec3 n_out33p0 = n_out57p0 + vec3(n_out40p0);


// Output:0
	COLOR.rgb = n_out31p0;
	COLOR.a = n_out33p0.x;


}
"
graph_offset = Vector2(735.459, 140.266)
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2(2020, 260)
nodes/fragment/2/node = SubResource("VisualShaderNodeInput_cvj4c")
nodes/fragment/2/position = Vector2(-660, 200)
nodes/fragment/3/node = SubResource("VisualShaderNodeTexture_kymmc")
nodes/fragment/3/position = Vector2(-200, 60)
nodes/fragment/29/node = SubResource("VisualShaderNodeColorConstant_14cg5")
nodes/fragment/29/position = Vector2(860, 100)
nodes/fragment/31/node = SubResource("VisualShaderNodeMix_gt787")
nodes/fragment/31/position = Vector2(1180, 180)
nodes/fragment/33/node = SubResource("VisualShaderNodeVectorOp_hqeo0")
nodes/fragment/33/position = Vector2(820, 460)
nodes/fragment/38/node = SubResource("VisualShaderNodeTexture_7imnm")
nodes/fragment/38/position = Vector2(-520, 1020)
nodes/fragment/39/node = SubResource("VisualShaderNodeMix_v3h8k")
nodes/fragment/39/position = Vector2(220, 680)
nodes/fragment/40/node = SubResource("VisualShaderNodeStep_kpt7u")
nodes/fragment/40/position = Vector2(460, 820)
nodes/fragment/42/node = SubResource("VisualShaderNodeFloatFunc_dyn8m")
nodes/fragment/42/position = Vector2(-240, 1100)
nodes/fragment/47/node = SubResource("VisualShaderNodeFloatConstant_n4qvm")
nodes/fragment/47/position = Vector2(-1774.07, 1285.1)
nodes/fragment/48/node = SubResource("VisualShaderNodeFloatConstant_ha1yb")
nodes/fragment/48/position = Vector2(-1694.07, 1425.1)
nodes/fragment/49/node = SubResource("VisualShaderNodeInput_4pxt3")
nodes/fragment/49/position = Vector2(-2040, 940)
nodes/fragment/51/node = SubResource("VisualShaderNodeUVFunc_8v6s5")
nodes/fragment/51/position = Vector2(-1660, 840)
nodes/fragment/52/node = SubResource("VisualShaderNodeExpression_fg2tq")
nodes/fragment/52/position = Vector2(-1180, 860)
nodes/fragment/52/size = Vector2(513.781, 284.487)
nodes/fragment/52/input_ports = "0,3,UV;1,0,r;2,0,feather;"
nodes/fragment/52/output_ports = "0,5,color;"
nodes/fragment/52/expression = "vec2 n_uv = UV -0.5;
float d = length(n_uv);
float c = smoothstep(r,r + feather,d);
color = vec4(vec3(c),1.0);"
nodes/fragment/53/node = SubResource("VisualShaderNodeFloatFunc_rooc8")
nodes/fragment/53/position = Vector2(-463.763, 766.692)
nodes/fragment/54/node = SubResource("VisualShaderNodeFloatConstant_u84nn")
nodes/fragment/54/position = Vector2(-440, 1780)
nodes/fragment/55/node = SubResource("VisualShaderNodeFloatConstant_umnvf")
nodes/fragment/55/position = Vector2(-440, 1680)
nodes/fragment/56/node = SubResource("VisualShaderNodeExpression_hcn2v")
nodes/fragment/56/position = Vector2(-160, 1660)
nodes/fragment/56/size = Vector2(634.014, 470.339)
nodes/fragment/56/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/56/output_ports = "0,0,Dither_Node;"
nodes/fragment/56/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/57/node = SubResource("VisualShaderNodeMix_qnelr")
nodes/fragment/57/position = Vector2(340, 400)
nodes/fragment/58/node = SubResource("VisualShaderNodeStep_a6ror")
nodes/fragment/58/position = Vector2(-54.1843, 604.979)
nodes/fragment/connections = PackedInt32Array(39, 0, 40, 1, 47, 0, 52, 1, 48, 0, 52, 2, 51, 0, 52, 0, 49, 0, 51, 0, 52, 0, 53, 0, 54, 0, 56, 1, 55, 0, 56, 0, 56, 0, 40, 0, 2, 0, 3, 2, 53, 0, 39, 1, 40, 0, 33, 1, 38, 0, 42, 0, 42, 0, 39, 2, 31, 0, 0, 0, 57, 0, 33, 0, 53, 0, 58, 1, 56, 0, 58, 0, 33, 0, 0, 1, 3, 4, 57, 1, 40, 0, 57, 0, 3, 0, 31, 1, 3, 4, 31, 2, 29, 0, 31, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uo04r"]
shader = SubResource("VisualShader_6tujj")

[sub_resource type="Theme" id="Theme_g7433"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08hgk"]
bg_color = Color(0.235294, 0.286275, 0.25098, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0dus"]
bg_color = Color(0.792157, 0.690196, 0.494118, 0.521569)
border_color = Color(0.0625, 0.140625, 0.140625, 1)

[sub_resource type="GDScript" id="GDScript_pev46"]
script/source = "extends Button


func _ready():
	set_focus_mode(0)


"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gafw5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="GDScript" id="GDScript_87hu6"]
script/source = "extends Button


func _ready():
	set_focus_mode(0)


"

[node name="05_SPEAKER" type="Node"]
script = ExtResource("1_6gph5")

[node name="Dialogue" type="Node" parent="."]
script = ExtResource("2_pxao7")

[node name="EzDialogue" type="Node" parent="Dialogue"]
script = ExtResource("2_iqwu8")

[node name="Npc_loader" type="Node" parent="."]
script = ExtResource("2_gecf5")

[node name="Show_Hand" type="Node" parent="."]
script = SubResource("GDScript_d4nqo")

[node name="Random_FaceChanger" type="Node" parent="."]
script = SubResource("GDScript_ktgfg")

[node name="Timer" type="Timer" parent="Random_FaceChanger"]

[node name="Instance_words" type="Node" parent="."]
script = SubResource("GDScript_wf71c")

[node name="00_NPC_CREATOR" type="Node" parent="."]
script = ExtResource("3_u2fyv")
Npc_all = Array[Resource("res://09_NPC/Npc_data.gd")]([ExtResource("4_y4ud3"), ExtResource("5_wppld"), ExtResource("6_6xaf4")])

[node name="Npc_convas" type="Control" parent="00_NPC_CREATOR"]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_6s3bf")
use_parent_material = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tools" type="Control" parent="00_NPC_CREATOR/Npc_convas"]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2

[node name="Area2D" type="Area2D" parent="00_NPC_CREATOR/Npc_convas/Tools"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="00_NPC_CREATOR/Npc_convas/Tools/Area2D"]
visible = false
shape = SubResource("RectangleShape2D_pykt4")

[node name="CAM_NPCS" type="SubViewportContainer" parent="00_NPC_CREATOR/Npc_convas"]
material = SubResource("ShaderMaterial_uo04r")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="00_NPC_CREATOR/Npc_convas/CAM_NPCS"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(400, 400)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="00_NPC_CREATOR/Npc_convas/CAM_NPCS/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.12, 5.735)
cull_mask = 32
fov = 55.0

[node name="Dialogue_box" type="Node2D" parent="00_NPC_CREATOR/Npc_convas"]
script = ExtResource("9_n4i7c")

[node name="Leave_button" type="Button" parent="00_NPC_CREATOR/Npc_convas/Dialogue_box"]
offset_left = 1122.0
offset_top = 1027.0
offset_right = 1195.0
offset_bottom = 1058.0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_g7433")
theme_override_colors/font_color = Color(0.8, 0.698039, 0.494118, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_08hgk")
theme_override_styles/hover = SubResource("StyleBoxFlat_h0dus")
text = "Leave"
alignment = 0
script = SubResource("GDScript_pev46")

[node name="Dialogue_name" type="Label" parent="00_NPC_CREATOR/Npc_convas/Dialogue_box"]
offset_left = 691.0
offset_top = 735.0
offset_right = 944.0
offset_bottom = 811.0
theme_override_colors/font_color = Color(0.317647, 0.615686, 0.529412, 1)
theme_override_font_sizes/font_size = 25
text = "Marc"
autowrap_mode = 3

[node name="Dialogue_text" type="Label" parent="00_NPC_CREATOR/Npc_convas/Dialogue_box"]
offset_left = 689.0
offset_top = 778.0
offset_right = 1207.0
offset_bottom = 854.0
theme_override_colors/font_color = Color(0.662745, 0.835294, 0.784314, 1)
theme_override_font_sizes/font_size = 25
text = "dddddddddddddddddddddddddddddddddddddddddddddd"
autowrap_mode = 3

[node name="Button_text" type="Button" parent="00_NPC_CREATOR/Npc_convas/Dialogue_box/Dialogue_text"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_g7433")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_gafw5")
theme_override_styles/hover = SubResource("StyleBoxFlat_h0dus")
alignment = 0
text_overrun_behavior = 2
script = SubResource("GDScript_87hu6")

[node name="VBoxContainer" type="VBoxContainer" parent="00_NPC_CREATOR/Npc_convas/Dialogue_box/Dialogue_text"]
material = ExtResource("7_mabi4")
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 153.0
offset_top = 52.0
offset_right = 332.0
offset_bottom = 165.0
grow_vertical = 0
mouse_filter = 2
theme_override_constants/separation = 10

[node name="NPC_light" type="OmniLight3D" parent="00_NPC_CREATOR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.002, 3.57)
layers = 32
shadow_bias = 0.0
shadow_normal_bias = 0.0
shadow_transmittance_bias = 0.21
shadow_blur = 6.76
omni_range = 16.972
omni_attenuation = 0.0915056

[node name="Models" type="Node" parent="00_NPC_CREATOR"]

[node name="hand_basic" parent="00_NPC_CREATOR/Models" instance=ExtResource("8_rq6rq")]
transform = Transform3D(-0.836274, 0.104468, -0.600797, 0.469035, -0.541469, -0.747022, -0.389713, -0.875855, 0.390162, 1.205, 11.253, 0)
visible = false

[node name="Loader" type="Node3D" parent="00_NPC_CREATOR/Models"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.26, 0)

[node name="Guy_02" parent="00_NPC_CREATOR/Models/Loader" instance=ExtResource("11_60j22")]

[connection signal="custom_signal_received" from="Dialogue/EzDialogue" to="Dialogue" method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="Dialogue/EzDialogue" to="Dialogue" method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="Dialogue/EzDialogue" to="Dialogue" method="_on_ez_dialogue_end_of_dialogue_reached"]
[connection signal="timeout" from="Random_FaceChanger/Timer" to="Random_FaceChanger" method="_on_timer_timeout"]
[connection signal="pressed" from="00_NPC_CREATOR/Npc_convas/Dialogue_box/Leave_button" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="00_NPC_CREATOR/Npc_convas/Dialogue_box/Dialogue_text/Button_text" to="Instance_words" method="_on_text_button_pressed"]
